--- a/传言集_偶然.md
+++ b/传言集_偶然.md
@@ -1,1 +1,6 @@
+# 传言集_偶然
 
+### 维特根斯坦与希特勒
+童年时代的维特根斯坦我们所知不多，但从仅存的几张照片上能看出他从小就郁郁寡欢，好像只是迫不得已才忍耐着和其他孩子一同合影，随时预备甩手走人一样。而最让人疑窦丛生的，无疑是他和希特勒的一段缘。1903年，十四岁的维特根斯坦进入奥地利林兹的一所中学读书，希特勒也在此就读，他们同岁，却差了两级——维特根斯坦成绩太好跳了一级，希特勒成绩太差留了一级，他们仅同校一年，之后希特勒就被勒令退学了。如今我们看着当时那张泛黄的集体照，不过是两个相隔天涯的小毛孩，谁能想到他们一个会成为二十世纪最伟大的犹太哲学家，另一个会成为二十世纪最恶名昭著的“领袖”，要把犹太人赶尽杀绝呢？
+
+有心人为了找出两者间的联系，细心肠翻阅了《我的奋斗》，终于在某个地方找到了像是证据的只言片语——希特勒提起中学时学校里有一个“我们都不太信任的” 犹太先生，“各种经历都使我们怀疑他的判断力”，我们没有证据说，这个犹太先生就是维特根斯坦，但我们不得不面对这样一种蝴蝶效应般荒唐的可能性：没准就是得理不饶人的富家子弟小维特根斯坦，把处处低人一等的土包子小希特勒狠狠修缮了一顿，从而改变了整个二十世纪的发展进程。而更让人瞠目结舌的另一个无责任揣测是是，维特根斯坦在1930年代之所以没有去俄国，而留在剑桥当老师（虽然他多次表明本人厌恶那帮装模作样的学究），是为了帮斯大林招兵买马，募集间谍——当时他所在的三一学院确实出了好几个著名的共产主义间谍。如果真是这样，我们要再度面对一种可能性：多年之后，维特根斯坦的门徒在二战中把英国的绝密情报传给了斯大林，为希特勒的垮台做了贡献，清算了儿时的那笔帐。不说了，曾经太八卦了。
