--- a/闲言碎语录.md
+++ b/闲言碎语录.md
@@ -19,3 +19,5 @@
 读博士这件事吧，算是活到现在最感到痛苦的了——没有人给出正确的意见却都在逼迫你给出结果。因为这个痛苦我简直想和所有人断绝来往。当年为什么读博呢？首先要怪自己没想好前途，其次是家父不断念叨“有个学位以后最差也是到高校当教授”的经文，最后是我没想到自己导师如此德艺无修。我近日逐渐觉得读博士作为人生的保底方法实在有缺妥当，因为或许当你选择了保底的人生，就意味着放弃了辉煌的机会？但是事到如今，放弃读博的沉没成本也是太大。或许我应该多多著书立文积累资本。
 
 学术界的鄙视链条蛮有趣的，比方说，假设拓扑理论研究者位于知识链条的顶端，但他们的牛逼需要研究泛函的一批人认可才行，也就是说，低一等级（我只是举例子，不是说拓扑学真的在顶端）的研究者能够理解上一级研究工作的正确性和意义，但是他们做不出来这样的工作。同理一级一级传导，直到末端利用统计计量方法讲经济学故事的大忽悠们，大多数由于根本无法理解上面几级工作的重要性，觉得自己才是知识生产的顶端。
+
+妈了个鸡儿的！读这么多书，还不如考个证有用！
