--- a/闲言碎语录.md
+++ b/闲言碎语录.md
@@ -20,4 +20,6 @@
 
 学术界的鄙视链条蛮有趣的，比方说，假设拓扑理论研究者位于知识链条的顶端，但他们的牛逼需要研究泛函的一批人认可才行，也就是说，低一等级（我只是举例子，不是说拓扑学真的在顶端）的研究者能够理解上一级研究工作的正确性和意义，但是他们做不出来这样的工作。同理一级一级传导，直到末端利用统计计量方法讲经济学故事的大忽悠们，大多数由于根本无法理解上面几级工作的重要性，觉得自己才是知识生产的顶端。
 
+马克思说，要看到事物的内部原因和外部原因。而我就是一个会把所有问题归结为外部原因的人，这就是太较真了。
+
 妈了个鸡儿的！读这么多书，还不如考个证有用！
